style.css
body,
html {
  height: 100%;
  font-family: "Nunito", sans-serif;
}

p {
  margin: 0;
}

.hero-image {
  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("img/profile.png");

  /* Set a specific height */
  height: 100%;

  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

#contact {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/2.jpg");
  /* height: 100%; */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  color: white;
}

#about::after {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 30%;
  bottom: 0;
  background: linear-gradient(0deg, #f3f6fc 10%, rgba(255, 255, 255, 0) 25%);
}

/* Place text in the middle of the image */
.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

/* The actual timeline (the vertical ruler) */
.timeline {
  position: relative;
  max-width: 1200px;
  margin: 0 auto;
}

/* The actual timeline (the vertical ruler) */
.timeline::after {
  content: "";
  position: absolute;
  width: 6px;
  background-color: #f3f6fc;
  top: 0;
  bottom: 0;
  left: 50%;
  /* margin-left: -3px; */
}

/* Container around content */
.timeline-container {
  padding: 10px 40px;
  position: relative;
  background-color: inherit;
  width: 50%;
}

/* The circles on the timeline */
.timeline-container::after {
  content: "";
  position: absolute;
  width: 25px;
  height: 25px;
  right: -17px;
  background-color: #2d61d4;
  border: 4px solid #2d61d4;
  top: 15px;
  border-radius: 50%;
  z-index: 1;
}

.left {
  left: 0;
}

/* Place the container to the right */
.right {
  left: 50%;
}

/* Add arrows to the left container (pointing right) */
.left::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  right: 31px;
  border: medium solid #f3f6fc;
  border-width: 10px 0 10px 10px;
  border-color: transparent transparent transparent #f3f6fc;
}

/* Add arrows to the right container (pointing left) */
.right::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  left: 31px;
  border: medium solid #f3f6fc;
  border-width: 10px 10px 10px 0;
  border-color: transparent #f3f6fc transparent transparent;
}

/* Fix the circle for containers on the right side */
.right::after {
  left: -9px;
}

/* The actual content */
.content {
  padding: 20px 30px;
  background-color: #f3f6fc;
  position: relative;
  border-radius: 6px;
}

.content .title {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.job-sm {
  display: none;
}

#contact .socmed h6 {
  margin: 0;
}

#contact .socmed .d-flex {
  align-items: center !important;
}

/* Media queries - Responsive timeline on screens less than 600px wide */
@media screen and (max-width: 600px) {
  .content .title {
    display: inline;
  }

  .job-sm {
    display: inline;
  }

  .job-normal {
    display: none;
  }

  #contact .socmed {
    align-items: start !important;
  }

  #contact .socmed h6 {
    font-size: 0.8rem;
  }
}

@media screen and (max-width: 768px) {
  /* Place the timelime to the left */
  .timeline::after {
    left: 31px;
  }

  /* Full-width containers */
  .timeline-container {
    width: 100%;
    padding-left: 70px;
    padding-right: 25px;
  }

  /* Make sure that all arrows are pointing leftwards */
  .timeline-container::before {
    left: 61px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent white transparent transparent;
  }

  /* Make sure all circles are at the same spot */
  .left::after,
  .right::after {
    left: 22px;
  }

  /* Make all right containers behave like the left ones */
  .right {
    left: 0%;
  }

  #about-me .col-8 {
    width: 100%;
  }

  #contact .col-md-5 {
    align-items: center;
    margin-bottom: 2rem;
  }

  #contact .col {
    justify-content: center !important;
  }

  #contact .col .col-8 {
    width: 100%;
  }
}

